k8s/overlays/base/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garbo
  namespace: garbo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: garbo
  template:
    metadata:
      labels:
        app: garbo
    spec:
      containers:
        - image: ghcr.io/klimatbyran/garbo:3.1.18
          # {"$imagepolicy": "flux-system:garbo-dev"}
          resources: {}
          name: garbo
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
