k8s/overlays/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garbo
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - beta.dev.klimatkollen.se
        - api.dev.klimatkollen.se
      secretName: dev-klimatkollen-se-tls

  rules:
    - host: beta.dev.klimatkollen.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garbo
                port:
                  number: 80
    - host: api.dev.klimatkollen.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garbo
                port:
                  number: 80
